Added bootstrap to project and styled stories table

--- a/src/app/components/stories-table/stories-table.component.html
+++ b/src/app/components/stories-table/stories-table.component.html
@@ -1,4 +1,4 @@
-<table class="times-font">
+<table class="table table-striped times-font">
   <thead>
     <tr>
       <th>Title</th>
@@ -14,7 +14,7 @@
       <td>{{ story.abstract }}</td> <!-- Abstract -->
       <td>{{ story.web_url }}</td> <!-- Full Article Link -->
       <td>{{ story.pub_date }}</td> <!-- Date -->
-      <td>{{ story.pub_date  }}</td> <!-- Fiji Date -->
+      <td>{{ story.pub_date }}</td> <!-- Fiji Date -->
     </tr>
   </tbody>
 </table>
