Search bar and section select to table, created sections service, imported forms module into app.module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-stories-table></app-stories-table>
+<div class="container">
+  <app-stories-table></app-stories-table>
+</div>
