--- a/src/app/components/stories-table/stories-table.component.html
+++ b/src/app/components/stories-table/stories-table.component.html
@@ -1,20 +1,32 @@
-<table class="table table-striped times-font">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Abstract</th>
-      <th>Full Article</th>
-      <th>Date</th>
-      <th>Date (Fiji)</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let story of stories">
-      <td>{{ story.headline.main }}</td> <!-- Title -->
-      <td>{{ story.abstract }}</td> <!-- Abstract -->
-      <td>{{ story.web_url }}</td> <!-- Full Article Link -->
-      <td>{{ story.pub_date }}</td> <!-- Date -->
-      <td>{{ story.pub_date }}</td> <!-- Fiji Date -->
-    </tr>
-  </tbody>
-</table>
+<div class="row bottom-spacer">
+  <div class="col-9">
+    <input type="text" class="form-control" [(ngModel)]="searchTerm">
+  </div>
+  <div class="col-3">
+    <select class="form-control" [(ngModel)]="selectedSection">
+      <option *ngFor="let section of sections">{{section}}</option>
+    </select>
+  </div>
+</div>
+<div class="row">
+  <table class="table table-striped times-font">
+    <thead>
+      <tr>
+        <th>Title</th>
+        <th>Abstract</th>
+        <th>Full Article</th>
+        <th>Date</th>
+        <th>Date (Fiji)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let story of stories">
+        <td>{{ story.headline.main }}</td> <!-- Title -->
+        <td>{{ story.abstract }}</td> <!-- Abstract -->
+        <td>{{ story.web_url }}</td> <!-- Full Article Link -->
+        <td>{{ story.pub_date }}</td> <!-- Date -->
+        <td>{{ story.pub_date }}</td> <!-- Fiji Date -->
+      </tr>
+    </tbody>
+  </table>
+</div>
